fix jumping window size by hover

--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,20 @@ html, body, #root {
 .worldProfits {
   min-width: 980px;
   text-align: center;
-  height: 100%;
+  flex: 1 1;
   display: flex;
   justify-content: center;
   vertical-align: middle;
   flex-direction: column;
+  height: 100%;
 }
 
 .worldProfits_wrapper {
   background: #fff;
-  flex: 1;
+  flex: 1 1;
   box-shadow: inset 0 0 10px #000000;
+  min-height: 1px;
+  display: flex;
 }
 
 .worldProfits_title {
@@ -27,5 +30,4 @@ html, body, #root {
   background: rgba(255, 165, 0, 0.65);
   font-weight: bold;
   flex-basis: 40px;
-  padding: 10px 0;
 }
